--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
   list-style: none;
   text-decoration: none;
   scroll-behavior: smooth;
+  font-family: "Poppins", sans-serif;
+}
+
+*::selection {
+  background: black;
+  color: white;
 }
 
 body {
@@ -17,15 +23,13 @@ body {
 header {
   width: 100%;
   height: 10vh;
+  max-height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
   position: fixed;
   top: 0;
   z-index: 99999;
-}
-header * {
-  font-family: "Poppins", sans-serif;
 }
 
 header nav {
@@ -38,6 +42,7 @@ header nav {
   position: relative;
   z-index: 999999999;
   max-width: 1600px;
+  background: #fff;
 }
 
 header nav h1 {
@@ -86,8 +91,8 @@ header nav .nav-links li {
   display: flex;
   align-items: center;
 }
-header nav .nav-links li a{
-    color: whitesmoke;
+header nav .nav-links li a {
+  color: whitesmoke;
 }
 header nav .nav-links li::before {
   content: "";
@@ -112,7 +117,7 @@ header nav .nav-links li:hover::after {
   width: 100%;
 }
 
-header nav button{
+header nav button {
   padding: 10px 20px;
   background: black;
   color: white;
@@ -122,90 +127,300 @@ header nav button{
   transition: all 0.3s ease;
   border: 1px solid transparent;
 }
-header nav button:hover{
-    border: 1px solid black;
-    background: transparent;
-    color: black;
+header nav button:hover {
+  border: 1px solid black;
+  background: transparent;
+  color: black;
 }
 
-header nav .bar{
-    width: 50px;
-    height: 50px;
+header nav .bar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 5px;
+  padding: 10px;
+  cursor: pointer;
+}
+header nav .bar .bar-lines {
+  width: 100%;
+  height: 1px;
+  background: #fff;
+  transition: 0.3s all;
+}
+header nav .bar .bar-lines:nth-child(2) {
+  width: 75%;
+}
+header nav .bar .bar-lines:nth-child(3) {
+  width: 50%;
+}
+header nav .bar-active .bar-lines:nth-child(1) {
+  transform: rotate(45deg);
+  position: relative;
+  top: 2px;
+}
+header nav .bar-active .bar-lines:nth-child(2) {
+  transform: rotate(-45deg);
+  width: 100%;
+  position: relative;
+  top: -3px;
+}
+header nav .bar-active .bar-lines:nth-child(3) {
+  display: none;
+}
+
+header nav .nav-active {
+  display: flex;
+  position: absolute;
+  width: 400px;
+  height: 80px;
+  top: 150%;
+  left: 50%;
+  background: rgb(0, 0, 0);
+  border-radius: 50px;
+  padding: 20px;
+  transform: translate(-50%, -50%);
+  z-index: 9999999999999999;
+}
+
+main {
+  max-width: 1600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
+main #home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 110vh;
+  max-height: 700px;
+  width: 90%;
+  font-family: "Poppins", sans-serif;
+  transition: 1s all;
+}
+main #home h1 {
+  display: flex;
+  align-items: center;
+  gap: 0px;
+}
+main #home h1 span {
+  font-size: 8rem;
+  -webkit-text-stroke: 1px #000;
+  -moz-text-stroke: 1px #000;
+  -ms-text-stroke: 1px #000;
+  -o-text-stroke: 1px #000;
+  color: transparent;
+  display: inline-block;
+  padding: 10px;
+}
+
+main #about {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100vh;
+  width: 100%;
+  padding: 50px 100px;
+  gap: 50px;
+}
+main #about .about-text {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  width: 50%;
+  gap: 20px;
+  span {
+    -webkit-text-stroke: 2px #000;
+    -moz-text-stroke: 2px #000;
+    -ms-text-stroke: 2px #000;
+    -o-text-stroke: 2px #000;
+    color: transparent;
+  }
+}
+
+main #about .about-text .skills {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+main #about .about-text .skills .skill {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  label {
+    width: 20%;
+  }
+  progress {
+    width: 80%;
+    height: 10px;
+    border-radius: 50px;
+    appearance: none;
+    &::-webkit-progress-bar {
+      background: #a7a7a7;
+      border-radius: 50px;
+    }
+    &::-webkit-progress-value {
+      background: black;
+      border-radius: 50px;
+    }
+  }
+}
+main #about .about-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
     border-radius: 50%;
-    background: black;
+  }
+}
+
+main #projects {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  padding: 50px 100px;
+  gap: 50px;
+}
+main #projects .projects-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
+}
+main #projects .projects-container .project-card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 20px;
+  border: 1px solid #0000002f;
+  border-radius: 10px;
+  padding: 0px 0px 20px 0px;
+  .project-card-main {
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     flex-direction: column;
-    gap: 5px;
+    gap: 20px;
+    padding: 0px 20px;
+    button{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      padding: 10px 20px;
+      background: black;
+      color: white;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      border: 1px solid transparent;
+      &:hover{
+        border: 1px solid black;
+        background: transparent;
+        color: black;
+      }
+    }
+  }
+  img{
+    width: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+}
+
+#contact{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 50vh;
+  background: #000;
+  color: #fff;
+  gap: 50px;
+  .contact-icons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    a{
+      color: #000;
+      font-size: 1rem;
+      border: 1px solid #fff;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.3s ease;
+      background: #fff;
+      &:hover{
+        background: #000;
+        color: #fff;
+      }
+    }
+  }
+}
+
+
+@media (max-width: 1024px) {
+  main {
+    #projects .projects-container {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    section{
+      padding: 50px 50px !important;
+    }
+  }
+}
+@media (max-width: 768px) {
+  header nav{
     padding: 10px;
-    cursor: pointer;
-}
-header nav .bar .bar-lines{
-    width: 100%;
-    height: 1px;
-    background: #fff;
-    transition: 0.3s all;
-}
-header nav .bar .bar-lines:nth-child(2){
-    width: 75%;
-}
-header nav .bar .bar-lines:nth-child(3){
-    width: 50%;
-}
-header nav .bar-active .bar-lines:nth-child(1){
-    transform: rotate(45deg);
-    position: relative;
-    top: 2px;
-}
-header nav .bar-active .bar-lines:nth-child(2){
-    transform: rotate(-45deg);
-    width: 100%;
-    position: relative;
-    top: -3px;
-}
-header nav .bar-active .bar-lines:nth-child(3){
-    display: none;
+  }
+  main {
+    #projects .projects-container {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    #home{
+      .main-text{
+        span {
+          font-size: 4rem;
+        }
+      }
+    }
+    #about{
+      flex-direction: column;
+      .about-text{
+        width: 100%;
+        align-items: center;
+        text-align: center;
+      }
+    }
+  }
 }
 
-header nav .nav-active{
-    display: flex;
-    position: absolute;
-    width: 400px;
-    height: 80px;
-    top: 150%;
-    left: 50%;
-    background: rgb(0, 0, 0);
-    border-radius: 50px;
-    padding: 20px;
-    transform: translate(-50%, -50%);
-    z-index: 9999999999999999;
-}
-
-
-
-main{ 
-    max-width: 1600px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-main #home{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 110vh;
-    max-height: 700px;
-    width: 90%;
-    font-family: 'Poppins', sans-serif;
-    transition: 1s all;
-}
-main #home h1{
-    font-size: 8rem;
-    -webkit-text-stroke: 1px #000;
-    -moz-text-stroke: 1px #000;
-    -ms-text-stroke: 1px #000;
-    -o-text-stroke: 1px #000;
-    color: transparent;
+@media (max-width: 455px) {
+  main #home .main-text span {
+    font-size: 2rem;
+  }
 }
